# market-pulse

./: .coverage  .pre-commit-config.yaml  CI_IMPLEMENTATION_SUMMARY.md  LICENSE  MODELS_IMPLEMENTATION_SUMMARY.md  Makefile  PROCESSING_DTOS_EXPLANATION.md  README.md  REPOSITORIES_IMPLEMENTATION_SUMMARY.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini
.cursor/rules/: api.mdc  collectors.mdc  cursor-usage.mdc  db-and-repos.mdc  dto-contracts.mdc  global-guidelines.mdc  observability-devops.mdc  pipelines.mdc  python-style.mdc  tests.mdc
.github/workflows/: ci.yml  test-pr.yml
configs/: logging.yaml  scoring.yaml  sources.yaml
data/tickers/: README.md  manual_aliases.yaml
docs/: CI.md
examples/: complete_pipeline_example.py  config_usage_example.py  gdelt_mapping_example.py  repository_usage_example.py
infra/: Dockerfile  README.md  docker-compose.yml
infra/prometheus/: prometheus.yml
market_pulse/: __init__.py  api.py  settings.py  utils.py
market_pulse/db/: __init__.py  models.py  session.py
market_pulse/models/: __init__.py  dto.py  mappers.py
market_pulse/repos/: __init__.py  article.py  base.py  embed.py  price_bar.py  signal.py  ticker.py
scripts/: seed_tickers.py
scripts/issues_script/: create_gh_issues.py  issues.json
sql/: schema.sql
sql/migrations/: 0002_update_schema_for_dtos.sql  env.py
sql/migrations/versions/: 0001_initial_schema.py
summaries/: CI_FIXES_SUMMARY.md  CI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  SCHEMA_UPDATE_SUMMARY.md  TEST_RESULTS_SUMMARY.md
tests/: test_basic.py  test_database_integration.py  test_db_session.py  test_improved_validation.py  test_models.py  test_repositories.py  test_seed_tickers.py  test_settings.py  test_utils.py
tests/integration/: test_database.py  test_repositories.py
