[project]
name = "market-pulse"
version = "0.1.0"
description = "Market Pulse Radar app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "minio>=7.2.0",
    "prefect>=2.14.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
]

[tool.uv]
dev-dependencies = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "bandit",
    "pytest-asyncio",
    "httpx",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["scripts/"]
