[project]
name = "market-pulse"
version = "0.1.0"
description = "Market Pulse Radar app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg>=3.0.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "bandit",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]  # Ignore line too long errors

[tool.mypy]
python_version = "3.11"
strict = false
exclude = ["scripts/", "examples/"]
ignore_missing_imports = true
